# mixed-mode-example

./: .gitignore  WORKSPACE
src/main/java/com/mixed/example/: BUILD.bazel  Example.java
